--- a/MAUIMobileStarterKit/Screens/DashBoardScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/DashBoardScreen.xaml
@@ -13,17 +13,19 @@
                     <AbsoluteLayout Margin="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                         <Image Opacity="0.5" Source="backgroundvector1.png" Aspect="AspectFill" 
                                AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" />
-                        
+
                         <Image Source="home.png" Aspect="AspectFill" 
                                AbsoluteLayout.LayoutBounds="0.5, 0.5, -1, -1" HeightRequest="100" AbsoluteLayout.LayoutFlags="PositionProportional"/>
 
                         <Label Text="Home" HorizontalTextAlignment="Center" VerticalTextAlignment="End" 
                                AbsoluteLayout.LayoutBounds="0.5, 0.99, -1,-1" AbsoluteLayout.LayoutFlags="PositionProportional" 
                                FontFamily="VinaSansRegular" FontSize="25" />
-                      
                     </AbsoluteLayout>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DashBoardItemTapped" CommandParameter="0" />
+                    </Frame.GestureRecognizers>
                 </Frame>
-                
+
                 <Frame Padding="0" HeightRequest="180" Grid.Row="0" Grid.Column="1" BackgroundColor="#1C3132">
                     <AbsoluteLayout Margin="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                         <Image Opacity="0.5" Source="backgroundvector2.png" Aspect="AspectFill" 
@@ -37,6 +39,9 @@
              FontFamily="VinaSansRegular" FontSize="25" />
 
                     </AbsoluteLayout>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DashBoardItemTapped" CommandParameter="1" />
+                    </Frame.GestureRecognizers>
                 </Frame>
 
                 <Frame HeightRequest="180" Grid.Row="1" Grid.Column="0" BackgroundColor="#1C3132" Padding="0">
@@ -52,6 +57,9 @@ AbsoluteLayout.LayoutBounds="0.5, 0.99, -1,-1" AbsoluteLayout.LayoutFlags="Posit
 FontFamily="VinaSansRegular" FontSize="25" />
 
                     </AbsoluteLayout>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DashBoardItemTapped" CommandParameter="2" />
+                    </Frame.GestureRecognizers>
                 </Frame>
                 <Frame HeightRequest="180" Grid.Row="1" Grid.Column="1" BackgroundColor="#1C3132" Padding="0">
                     <AbsoluteLayout Margin="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
@@ -66,6 +74,9 @@ AbsoluteLayout.LayoutBounds="0.5, 0.99, -1,-1" AbsoluteLayout.LayoutFlags="Posit
 FontFamily="VinaSansRegular" FontSize="25" />
 
                     </AbsoluteLayout>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DashBoardItemTapped" CommandParameter="3" />
+                    </Frame.GestureRecognizers>
                 </Frame>
 
                 <Frame HeightRequest="180" Grid.Row="2" Grid.Column="0" BackgroundColor="#1C3132" Padding="0">
@@ -81,6 +92,9 @@ AbsoluteLayout.LayoutBounds="0.5, 0.99, -1,-1" AbsoluteLayout.LayoutFlags="Posit
 FontFamily="VinaSansRegular" FontSize="25" />
 
                     </AbsoluteLayout>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DashBoardItemTapped" CommandParameter="4" />
+                    </Frame.GestureRecognizers>
                 </Frame>
                 <Frame HeightRequest="180" Grid.Row="2" Grid.Column="1" BackgroundColor="#1C3132" Padding="0">
                     <AbsoluteLayout Margin="0" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
@@ -95,6 +109,9 @@ AbsoluteLayout.LayoutBounds="0.5, 0.99, -1,-1" AbsoluteLayout.LayoutFlags="Posit
 FontFamily="VinaSansRegular" FontSize="25" />
 
                     </AbsoluteLayout>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="DashBoardItemTapped" CommandParameter="5" />
+                    </Frame.GestureRecognizers>
                 </Frame>
 
 
