enable navigation flow

--- a/MAUIMobileStarterKit/Screens/DashBoardScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/DashBoardScreen.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.DashBoardScreen"
+             NavigationPage.HasNavigationBar="False"
              BackgroundColor="#1C3132"
              Title="DashBoardScreen">
     <ScrollView>
