--- a/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
@@ -7,13 +7,17 @@
     <VerticalStackLayout VerticalOptions="CenterAndExpand" Spacing="10">
         <SearchBar Placeholder="Search Canyon by Name" PlaceholderColor="#D7A367" FontFamily="CabinRegular" HorizontalOptions="CenterAndExpand"
                    CancelButtonColor="#D7A367" SearchButtonPressed="SearchButtonPressed"/>
-        <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="Transparent" CornerRadius="5" VerticalOptions="FillAndExpand">
+        <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="#4DD7A367" CornerRadius="5" VerticalOptions="FillAndExpand">
             <VerticalStackLayout Spacing="20" Padding="10,20,10,10">
                 <local:FlatingLabel Title="Country" />
                 <local:FlatingLabel Title="Region" />
                 <local:FlatingLabel Title="State" />
                 <Button Text="Search" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
             </VerticalStackLayout>
+        </Frame>
+        <Button Margin="10,0" Text="Create Canyon" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
+        <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="#4DD7A367" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
+           
         </Frame>
     </VerticalStackLayout>
 </ContentView>
