--- a/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomePageScreens/SearchCanyonScreen.xaml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Maui.GoogleMaps;assembly=Maui.GoogleMaps"
              Padding="10"
              xmlns:local="clr-namespace:MAUIMobileStarterKit.CustomViews"
              x:Class="MAUIMobileStarterKit.Screens.HomePageScreens.SearchCanyonScreen">
-    <VerticalStackLayout VerticalOptions="CenterAndExpand" Spacing="10">
-        <SearchBar Placeholder="Search Canyon by Name" PlaceholderColor="#D7A367" FontFamily="CabinRegular" HorizontalOptions="CenterAndExpand"
+    <VerticalStackLayout VerticalOptions="FillAndExpand">
+        <ScrollView Grid.Row="0" VerticalOptions="FillAndExpand" HeightRequest="579.46" Padding="0,0,0,10">
+            <VerticalStackLayout  Spacing="10" >
+            <SearchBar Placeholder="Search Canyon by Name" PlaceholderColor="#D7A367" FontFamily="CabinRegular" HorizontalOptions="CenterAndExpand"
                    CancelButtonColor="#D7A367" SearchButtonPressed="SearchButtonPressed"/>
-        <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="#4DD7A367" CornerRadius="5" VerticalOptions="FillAndExpand">
-            <VerticalStackLayout Spacing="20" Padding="10,20,10,10">
-                <local:FlatingLabel Title="Country" />
-                <local:FlatingLabel Title="Region" />
-                <local:FlatingLabel Title="State" />
-                <Button Text="Search" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
-            </VerticalStackLayout>
-        </Frame>
-        <Button Margin="10,0" Text="Create Canyon" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
-        <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="#4DD7A367" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="300">
-           
-        </Frame>
+            <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="#4DD7A367" CornerRadius="5" VerticalOptions="FillAndExpand">
+                <VerticalStackLayout Spacing="20" Padding="10,20,10,10">
+                    <local:FlatingLabel Title="Country" />
+                    <local:FlatingLabel Title="Region" />
+                    <local:FlatingLabel Title="State" />
+                    <Button Text="Search" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
+                </VerticalStackLayout>
+            </Frame>
+            <Button Margin="10,0" Text="Create Canyon" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
+            <Frame Padding="0" BackgroundColor="#4D335A5C"  BorderColor="#4DD7A367" CornerRadius="5" VerticalOptions="FillAndExpand" HeightRequest="200">
+
+            </Frame>
+        </VerticalStackLayout>
+        </ScrollView>
+        <maps:Map  VerticalOptions="FillAndExpand"  Grid.Row="1" HeightRequest="193.16" MapClicked="Map_MapClicked"/>
     </VerticalStackLayout>
 </ContentView>
