--- a/MAUIMobileStarterKit/Screens/HomePageScreens/GoogleMapScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomePageScreens/GoogleMapScreen.xaml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Maui.GoogleMaps;assembly=Maui.GoogleMaps"
+             Padding="10"
              x:Class="MAUIMobileStarterKit.Screens.HomePageScreens.GoogleMapScreen">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    <VerticalStackLayout VerticalOptions="FillAndExpand" >
+        <maps:Map MyLocationEnabled="True"  VerticalOptions="FillAndExpand" x:Name="mapview" />
     </VerticalStackLayout>
 </ContentView>
