--- a/MAUIMobileStarterKit/Screens/HomeScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomeScreen.xaml
@@ -13,19 +13,19 @@
   HorizontalOptions="StartAndExpand"/>
 
         <StackLayout x:Name="childLayout"   AbsoluteLayout.LayoutBounds="0, 0, 1, 1" AbsoluteLayout.LayoutFlags="SizeProportional" />
-        <Frame BorderColor="Transparent" CornerRadius="20" BackgroundColor="#D7A367" Padding="10,15,10,15" AbsoluteLayout.LayoutBounds="0.5, 0.99, 250,-1" AbsoluteLayout.LayoutFlags="PositionProportional" >
+        <Frame WidthRequest="250" HeightRequest="70" BorderColor="Transparent" CornerRadius="20" BackgroundColor="#D7A367" Padding="10,15,10,15" AbsoluteLayout.LayoutBounds="0.5, 0.99, -1,-1" AbsoluteLayout.LayoutFlags="PositionProportional" >
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Spacing="50" >
-                <Image Source="loupe.png" Aspect="AspectFill" HeightRequest="20">
+                <Image x:Name="search" Source="loupe.png" Aspect="AspectFit" HeightRequest="20">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped" CommandParameter="0" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Image Source="address.png" Aspect="AspectFill" HeightRequest="20">
+                <Image x:Name="map"  Source="address.png" Aspect="AspectFit" HeightRequest="20">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped" CommandParameter="1" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Image Source="clock.png" Aspect="AspectFill" HeightRequest="20">
+                <Image x:Name="clock"  Source="clock.png" Aspect="AspectFit" HeightRequest="20">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped" CommandParameter="2" />
                     </Image.GestureRecognizers>
