--- a/MAUIMobileStarterKit/Screens/ContactUsPage.xaml
+++ b/MAUIMobileStarterKit/Screens/ContactUsPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MAUIMobileStarterKit.CustomViews"
-             NavigationPage.HasNavigationBar="False"
+             BackgroundColor="#1C3132"
              x:Class="MAUIMobileStarterKit.Screens.ContactUsPage"
              Title="ContactUsPage">
     <AbsoluteLayout>
@@ -23,7 +23,7 @@ HorizontalOptions="StartAndExpand"/>
 
             <VerticalStackLayout VerticalOptions="EndAndExpand" Spacing="40">
                 <local:FlatingLabel Title="Message" />
-                <Button Margin="10,0" Text="Create Canyon" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
+                <Button Margin="10,0" Text="Create Canyon" FontFamily="CabinBold" BackgroundColor="#D7A367" CornerRadius="20" TextColor="White" FontSize="15"/>
             </VerticalStackLayout>
         </StackLayout>
 
