--- a/MAUIMobileStarterKit/Screens/HomeScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomeScreen.xaml
@@ -2,9 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MAUIMobileStarterKit.Screens.HomeScreen"
-             NavigationPage.HasNavigationBar="False"
-             BackgroundColor="#1C3132"
-             Title="MainPage">
+             BackgroundColor="#1C3132">
+    <NavigationPage.TitleView>
+        <StackLayout VerticalOptions="Center">
+            <Label VerticalTextAlignment="Center" Text="Home" TextColor="White" FontSize="Title" FontFamily="CabinBold"/>
+        </StackLayout>
+    </NavigationPage.TitleView>
     <AbsoluteLayout>
         <Image Opacity=".1" x:Name="backgroundInmage"
   Source="backgroundvector2.png"
