--- a/MAUIMobileStarterKit/Screens/HomePageScreens/CanyonModificationScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/HomePageScreens/CanyonModificationScreen.xaml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+              Padding="10"
              x:Class="MAUIMobileStarterKit.Screens.HomePageScreens.CanyonModificationScreen">
-    <VerticalStackLayout>
-        <Label 
-            Text="Cannyon modification screen"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout>
+        <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Spacing="10">
+            <Label Text="Comments from last:" FontSize="20" FontFamily="CabinRegular"/>
+            <Label Text="0" FontSize="20" FontAttributes="Bold" FontFamily="CabinBold" />
+            <Label Text="Days" FontSize="20" FontFamily="CabinRegular"/>
+        </HorizontalStackLayout>
+        <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Spacing="10">
+            <Label Text="Topography from last:" FontSize="20" FontFamily="CabinRegular"/>
+            <Label Text="0" FontSize="20" FontAttributes="Bold" FontFamily="CabinBold" />
+            <Label Text="Days" FontSize="20" FontFamily="CabinRegular"/>
+        </HorizontalStackLayout>
+        <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Spacing="10">
+            <Label Text="New or Modify Canyons from last:" FontSize="20" FontFamily="CabinRegular"/>
+            <Label Text="0" FontSize="20" FontAttributes="Bold" FontFamily="CabinBold" />
+            <Label Text="Days" FontSize="20" FontFamily="CabinRegular"/>
+        </HorizontalStackLayout>
+    </StackLayout>
 </ContentView>
