--- a/MAUIMobileStarterKit/Screens/SettingsScreen/MainSettingScreen.xaml
+++ b/MAUIMobileStarterKit/Screens/SettingsScreen/MainSettingScreen.xaml
@@ -20,6 +20,10 @@
                     <Image Grid.Row="0"  Grid.Column="0" Aspect="AspectFit" Source="language.png" HeightRequest="30"/>
                     <Label Grid.Row="0"  Grid.Column="1" Text="Lanugae" FontSize="20" FontFamily="CabinBold" VerticalTextAlignment="Center"/>
                 </Grid>
+                <Frame.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="LanuageTapped"
+                              NumberOfTapsRequired="1" />
+                </Frame.GestureRecognizers>
             </Frame>
 
             <Frame Padding="0" BorderColor="#D7A367" HasShadow="False" BackgroundColor="Transparent" HeightRequest="60" WidthRequest="200">
@@ -29,5 +33,16 @@
                 </Grid>
             </Frame>
         </VerticalStackLayout>
+        <Picker x:Name="picker" Opacity="0" SelectedIndexChanged="LanugaeSelectedIndexChanged"
+  Title="Select a Lanuage">
+            <Picker.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>English (en)</x:String>
+                    <x:String>French (fr)</x:String>
+                    <x:String>Italian (It)</x:String>
+                    <x:String>Spanish (es)</x:String>
+                </x:Array>
+            </Picker.ItemsSource>
+        </Picker>
     </Grid>
 </ContentPage>
